// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Image alt 1`] = `
<DocumentFragment>
  <div
    class="za-image za-image--rect"
  >
    <img
      alt="image"
      class="za-image__img"
      src="src=\\"https://camo.githubusercontent.com/f5847256d81e5f8c31aee6554f749baf64654a131fed0fca987bd39e023a690f/68747470733a2f2f7a61726d2e64657369676e2f696d616765732f6c6f676f2e31613663666333302e737667\\""
      style="object-fit: fill;"
    />
  </div>
</DocumentFragment>
`;

exports[`Image fallback 1`] = `
<DocumentFragment>
  <div
    class="za-image za-image--rect"
  >
    <img
      class="za-image__img"
      src="src=\\"https://camo.githubusercontent.com/f5847256d81e5f8c31aee6554f749baf64654a131fed0fca987bd39e023a690f/68747470733a2f2f7a61726d2e64657369676e2f696d616765732f6c6f676f2e31613663666333302e737667\\""
      style="object-fit: fill;"
    />
  </div>
</DocumentFragment>
`;

exports[`Image fill 1`] = `
<DocumentFragment>
  <div
    class="za-image za-image--rect"
  >
    <img
      class="za-image__img"
      fill="cover"
      src="src=\\"https://camo.githubusercontent.com/f5847256d81e5f8c31aee6554f749baf64654a131fed0fca987bd39e023a690f/68747470733a2f2f7a61726d2e64657369676e2f696d616765732f6c6f676f2e31613663666333302e737667\\""
      style="object-fit: fill;"
    />
  </div>
</DocumentFragment>
`;

exports[`Image height 1`] = `
<DocumentFragment>
  <div
    class="za-image za-image--rect"
    style="height: 40px;"
  >
    <img
      class="za-image__img"
      src="src=\\"https://camo.githubusercontent.com/f5847256d81e5f8c31aee6554f749baf64654a131fed0fca987bd39e023a690f/68747470733a2f2f7a61726d2e64657369676e2f696d616765732f6c6f676f2e31613663666333302e737667\\""
      style="object-fit: fill;"
    />
  </div>
</DocumentFragment>
`;

exports[`Image placeholder 1`] = `
<DocumentFragment>
  <div
    class="za-image za-image--rect"
  >
    <img
      class="za-image__img"
      src="src=\\"https://camo.githubusercontent.com/f5847256d81e5f8c31aee6554f749baf64654a131fed0fca987bd39e023a690f/68747470733a2f2f7a61726d2e64657369676e2f696d616765732f6c6f676f2e31613663666333302e737667\\""
      style="object-fit: fill;"
    />
    <div
      class="za-image__loading"
    >
      loading
    </div>
  </div>
</DocumentFragment>
`;

exports[`Image render correctly 1`] = `
<DocumentFragment>
  <div
    class="za-image za-image--rect"
  >
    <img
      class="za-image__img"
      src="src=\\"https://camo.githubusercontent.com/f5847256d81e5f8c31aee6554f749baf64654a131fed0fca987bd39e023a690f/68747470733a2f2f7a61726d2e64657369676e2f696d616765732f6c6f676f2e31613663666333302e737667\\""
      style="object-fit: fill;"
    />
  </div>
</DocumentFragment>
`;

exports[`Image shape 1`] = `
<DocumentFragment>
  <div
    class="za-image za-image--circle"
  >
    <img
      class="za-image__img"
      src="src=\\"https://camo.githubusercontent.com/f5847256d81e5f8c31aee6554f749baf64654a131fed0fca987bd39e023a690f/68747470733a2f2f7a61726d2e64657369676e2f696d616765732f6c6f676f2e31613663666333302e737667\\""
      style="object-fit: fill;"
    />
  </div>
</DocumentFragment>
`;

exports[`Image width 1`] = `
<DocumentFragment>
  <div
    class="za-image za-image--rect"
    style="width: 50px;"
  >
    <img
      class="za-image__img"
      src="src=\\"https://camo.githubusercontent.com/f5847256d81e5f8c31aee6554f749baf64654a131fed0fca987bd39e023a690f/68747470733a2f2f7a61726d2e64657369676e2f696d616765732f6c6f676f2e31613663666333302e737667\\""
      style="object-fit: fill;"
    />
  </div>
</DocumentFragment>
`;
